# pomata

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORRECTNESS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  docs.yml  informational.yml  labels.yml  nightly.yml  release.yml  scorecard.yml
docs/: concepts.md  conf.py  correctness.md  design.md  faq.md  glossary.md  index.md  installation.md  project.md  quickstart.md  troubleshooting.md  trust.md  tutorial.md  versioning.md
docs/_extra/: concepts.html
docs/_static/: anchor_fix.js  custom.css  ohlcv_sample.parquet
docs/api/: index.rst  indicators.rst  metrics.rst  pnl.rst
docs/benchmarks/: index.md  indicators.md  metrics.md  pnl.md
docs/families/: indicators.md  metrics.md  pnl.md
scripts/: benchmark.py  benchmark_charts.py  calibrate_tolerances.py  complexity.py  precision_table.py
src/pomata/: __init__.py  _expr.py  _policy.py
tests/: POLICY.md  README.md  __init__.py  all_declarations.py  all_specs.py  conftest.py  regenerate_docstrings.py  test_benchmark.py  test_complexity.py  test_differential.py  test_docs_surface.py  test_docstring_roundtrip.py  test_docstrings.py  test_dtype.py  test_expr.py  test_grammar.py  test_ladder.py  test_naming.py  test_oracle_docstrings.py  test_package.py  test_policies.py  test_policy_grammar.py  test_precision_table.py  test_readme_examples.py  test_registry.py  test_rungs.py  test_scale_grammar.py  test_scripts.py  test_spec_coverage.py  test_spec_files.py  test_typing.py  test_versions.py
tests/indicators/: __init__.py  absolute_price_oscillator.py  accumulation_distribution.py  accumulation_distribution_oscillator.py  adx.py  adxr.py  all_indicators.py  aroon.py  aroon_oscillator.py  atr.py  atr_normalized.py  awesome_oscillator.py  balance_of_power.py  bollinger_bands.py  cci.py  chaikin_money_flow.py  chande_momentum_oscillator.py  dema.py  di_minus.py  di_plus.py  dm_minus.py  dm_plus.py  dominant_cycle_period.py  dominant_cycle_phase.py  donchian_channels.py  dx.py  ema.py  enums.py  fisher_transform.py  harness.py  hilbert_phasor.py  hilbert_trendline.py  hma.py  ichimoku.py  kama.py  keltner_channels.py  linear_regression.py  linear_regression_angle.py  linear_regression_intercept.py  linear_regression_slope.py  (+121 more)
tests/metrics/: adjusted_sharpe_ratio.py  all_metrics.py  alpha.py  alpha_rolling.py  beta.py  beta_rolling.py  burke_ratio.py  cagr.py  cagr_rolling.py  calmar_ratio.py  capture_downside_ratio.py  capture_ratio.py  capture_upside_ratio.py  common_sense_ratio.py  conditional_drawdown_at_risk.py  conditional_value_at_risk.py  downside_deviation.py  downside_deviation_rolling.py  drawdown.py  drawdown_rolling.py  enums.py  gain_to_pain_ratio.py  harness.py  information_ratio.py  information_ratio_rolling.py  kelly_criterion.py  kurtosis.py  kurtosis_rolling.py  max_drawdown.py  max_drawdown_duration.py  modigliani_risk_adjusted_performance.py  omega_ratio.py  omega_ratio_rolling.py  oracles.py  pain_index.py  pain_ratio.py  payoff_ratio.py  probabilistic_sharpe_ratio.py  profit_factor.py  recovery_ratio.py  (+91 more)
tests/pnl/: __init__.py  all_pnl.py  cost_borrow.py  cost_fixed.py  cost_funding.py  cost_notional.py  cost_per_share.py  cost_proportional.py  cost_slippage.py  cumulative_pnl.py  dividend.py  enums.py  equity_curve.py  harness.py  pnl_gross.py  pnl_gross_inverse.py  pnl_net.py  returns_gross.py  returns_log.py  returns_net.py  returns_simple.py  test_benchmark.py  test_bespoke.py  test_contracts.py  test_cost_borrow.py  test_cost_fixed.py  test_cost_funding.py  test_cost_notional.py  test_cost_per_share.py  test_cost_proportional.py  test_cost_slippage.py  test_cumulative_pnl.py  test_dividend.py  test_dtype.py  test_equity_curve.py  test_naming.py  test_pnl_gross.py  test_pnl_gross_inverse.py  test_pnl_net.py  test_returns_gross.py  (+6 more)
tests/support/: __init__.py  asserts.py  bars.py  benchmarks.py  columns.py  compare.py  contracts.py  declaration.py  docstring.py  edge_classes.py  frames.py  messages.py  policies.py  registry.py  rungs.py  spec.py  strategies.py  synthesis.py  talib_coverage.py  tolerances.py
tests_new/: DESIGN.md  README.md  __init__.py  all_declarations.py  all_specs.py  conftest.py  test_benchmark.py  test_differential.py  test_dtype.py  test_ladder.py  test_precision_table.py  test_registry.py  test_rungs.py  test_surface.py  test_typing.py
tests_new/indicators/: __init__.py  absolute_price_oscillator.py  accumulation_distribution.py  accumulation_distribution_oscillator.py  adx.py  adxr.py  all_indicators.py  aroon.py  aroon_oscillator.py  atr.py  atr_normalized.py  awesome_oscillator.py  balance_of_power.py  bollinger_bands.py  cci.py  chaikin_money_flow.py  chande_momentum_oscillator.py  dema.py  di_minus.py  di_plus.py  dm_minus.py  dm_plus.py  dominant_cycle_period.py  dominant_cycle_phase.py  donchian_channels.py  dx.py  ema.py  enums.py  fisher_transform.py  harness.py  hilbert_phasor.py  hilbert_trendline.py  hma.py  ichimoku.py  kama.py  keltner_channels.py  linear_regression.py  linear_regression_angle.py  linear_regression_intercept.py  linear_regression_slope.py  (+42 more)
tests_new/metrics/: __init__.py  adjusted_sharpe_ratio.py  all_metrics.py  alpha.py  alpha_rolling.py  beta.py  beta_rolling.py  burke_ratio.py  cagr.py  cagr_rolling.py  calmar_ratio.py  capture_downside_ratio.py  capture_ratio.py  capture_upside_ratio.py  common_sense_ratio.py  conditional_drawdown_at_risk.py  conditional_value_at_risk.py  downside_deviation.py  downside_deviation_rolling.py  drawdown.py  drawdown_rolling.py  gain_to_pain_ratio.py  harness.py  information_ratio.py  information_ratio_rolling.py  kelly_criterion.py  kurtosis.py  kurtosis_rolling.py  max_drawdown.py  max_drawdown_duration.py  modigliani_risk_adjusted_performance.py  omega_ratio.py  omega_ratio_rolling.py  (+33 more)
(+349 files in other folders)
